--- a/app/src/main/res/layout/fragment_reunion_list.xml
+++ b/app/src/main/res/layout/fragment_reunion_list.xml
@@ -9,5 +9,6 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.reunion_list.ItemFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:context=".ui.reunion_list.ReunionFragment"
+    tools:listitem="@layout/item_reunion"
+    />
