--- a/app/src/main/res/layout/activity_add_reunion.xml
+++ b/app/src/main/res/layout/activity_add_reunion.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintVertical_bias="0.0"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ui.reunion_list.AddReunionActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,36 +34,57 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </Spinner>
+
+            <TextView
                 android:id="@+id/roomName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/room_name"
+
                 android:inputType="textAutoComplete" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <TextView
             android:id="@+id/time"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="18dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/reunionTime"
+
+            <TimePicker
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/meeting_time"
-                android:inputType="phone" />
-        </com.google.android.material.textfield.TextInputLayout>
+               >
+
+            </TimePicker>
+
+            <DatePicker
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false">
+
+            </DatePicker>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/subject"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxStrokeErrorColor="@color/red"
+            app:helperText="obligatoire*"
+            app:helperTextTextColor="@color/red"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@color/design_default_color_error"
             android:layout_marginTop="18dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -69,6 +101,12 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxStrokeErrorColor="@color/red"
+            app:helperText="obligatoire*"
+            app:helperTextTextColor="@color/red"
+            app:endIconMode="clear_text"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@color/design_default_color_error"
             android:layout_marginTop="18dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -82,8 +120,38 @@
                 android:inputType="textMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipEntry"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Valider"
+            android:theme="@style/Theme.MaterialComponents.Light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/attendeesNames" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/attendeesMails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:chipSpacingHorizontal="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/attendeesNames"
+            app:singleLine="true"
+            app:singleSelection="true">
+
+        </com.google.android.material.chip.ChipGroup>
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/create"
+            android:id="@+id/createReunion"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -93,8 +161,8 @@
             android:layout_marginTop="20dp"
             android:text="Enregistrer"/>
 
+
     </LinearLayout>
 
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
