--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="red">#FF0000</color>
     <color name="light_blue">#2196F3</color>
     <color name="orange">#FF9800</color>
+    <color name="yellow">#FF2</color>
 </resources>
