--- a/app/src/main/res/layout/activity_add_reunion.xml
+++ b/app/src/main/res/layout/activity_add_reunion.xml
@@ -59,6 +59,7 @@
 
 
             <TimePicker
+                android:id="@+id/reunionTimePicker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                >
@@ -66,6 +67,7 @@
             </TimePicker>
 
             <DatePicker
+                android:id="@+id/reunionDatePicker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:datePickerMode="spinner"
@@ -155,7 +157,7 @@
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:enabled="false"
+            android:enabled="true"
             android:layout_gravity="center"
             app:cornerRadius="20dp"
             android:layout_marginTop="20dp"
