--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,18 @@
     <color name="light_blue">#2196F3</color>
     <color name="orange">#FF9800</color>
     <color name="yellow">#FF2</color>
+
+    <integer-array name="meeting_colors">
+        <item>@color/red</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+        <item>@color/light_blue</item>
+        <item>@color/black</item>
+        <item>@color/purple_200</item>
+        <item>@color/purple_500</item>
+        <item>@color/purple_700</item>
+        <item>@color/teal_200</item>
+        <item>@color/teal_700</item>
+
+    </integer-array>
 </resources>
