--- a/app/src/main/res/layout/activity_add_reunion.xml
+++ b/app/src/main/res/layout/activity_add_reunion.xml
@@ -14,6 +14,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/add_reunion_activity"
     tools:context=".ui.reunion_list.AddReunionActivity">
 
 
